update class diagram in readme.txt

--- a/ex1_Warehouse/src/ex1_Warehouse/readme
+++ b/ex1_Warehouse/src/ex1_Warehouse/readme
@@ -1,2 +1,5 @@
 Run main method in class Test for testing the program.
 You can add more pallet to the program to make new situation for testing.
+
+link class diagram:
+https://app.diagrams.net/#G1BorV8XlC6dy837xDWVfjXB9OwUGiUsS9#%7B%22pageId%22%3A%22q4wbQxF6jnqRRAsEJSEs%22%7D
